--- a/.storybook/global.css
+++ b/.storybook/global.css
@@ -5,7 +5,7 @@
   grid-template-columns: repeat(3, 1fr);
   align-items: stretch;
 }
-sgds-card.intro::part(base), sgds-card.faq::part(base) {
+sgds-card.intro::part(base) {
   border: none;
   background-color: #f6f7fb;
   border-radius: 24px;
@@ -13,7 +13,11 @@ sgds-card.intro::part(base), sgds-card.faq::part(base) {
 }
 
 /* FAQ stylings */
-
+sgds-card.faq::part(base) {
+  border: none;
+  background-color: #f6f7fb;
+  border-radius: 24px;
+}
 sgds-faq-grid{
   display: grid;
   grid-template-columns: 3fr 1fr;
