fix(*): accessibiliyt based on storybook accesibility addon

--- a/src/components/Sidenav/sidenav-item.css
+++ b/src/components/Sidenav/sidenav-item.css
@@ -52,7 +52,7 @@ a.sidenav-btn {
   line-height: var(--sgds-sidenav-item-btn-line-height);
 }
 
-ul.sidenav-list {
+div.sidenav-list {
   list-style: none;
   display: flex;
   flex-direction: column;
