--- a/src/themes/day.css
+++ b/src/themes/day.css
@@ -11,6 +11,8 @@
   --sgds-black: #000;
   --sgds-white: #fff;
   --sgds-gray: #595959;
+
+  /* Primitive - Primary Color */
   --sgds-primary-100: #eae8ff;
   --sgds-primary-200: #d1ceff;
   --sgds-primary-300: #b1acff;
@@ -20,6 +22,8 @@
   --sgds-primary-700: #42209f;
   --sgds-primary-800: #2d007e;
   --sgds-primary-900: #1c005e;
+
+  /* Primitive - Secondary Color */
   --sgds-secondary-100: #c8f1f9;
   --sgds-secondary-200: #abd9e2;
   --sgds-secondary-300: #85bbc5;
@@ -29,6 +33,8 @@
   --sgds-secondary-700: #004755;
   --sgds-secondary-800: #002c3a;
   --sgds-secondary-900: #001321;
+
+  /* Primitive - Success Color */
   --sgds-success-100: #c2f5bf;
   --sgds-success-200: #a5dfa1;
   --sgds-success-300: #7ec17a;
@@ -38,6 +44,8 @@
   --sgds-success-700: #004d00;
   --sgds-success-800: #003100;
   --sgds-success-900: #001600;
+
+  /* Primitive - Info Color */
   --sgds-info-100: #c5f0ff;
   --sgds-info-200: #a7d6ff;
   --sgds-info-300: #7fb5ff;
@@ -47,6 +55,8 @@
   --sgds-info-700: #0022b9;
   --sgds-info-800: #000097;
   --sgds-info-900: #130075;
+
+  /* Primitive - Warning Color */
   --sgds-warning-100: #ffe6c6;
   --sgds-warning-200: #f3cda8;
   --sgds-warning-300: #d7ab81;
@@ -56,6 +66,8 @@
   --sgds-warning-700: #672f00;
   --sgds-warning-800: #491200;
   --sgds-warning-900: #2d0000;
+
+  /* Primitive - Danger Color */
   --sgds-danger-100: #ffdac8;
   --sgds-danger-200: #ffbdaa;
   --sgds-danger-300: #ff9782;
@@ -65,6 +77,9 @@
   --sgds-danger-700: #950000;
   --sgds-danger-800: #720000;
   --sgds-danger-900: #4f0000;
+
+  /* Primitive - Gray Color */
+  --sgds-gray-000: #ffffff;
   --sgds-gray-100: #eaeaea;
   --sgds-gray-200: #d2d2d2;
   --sgds-gray-300: #b2b2b2;
@@ -75,8 +90,19 @@
   --sgds-gray-800: #252525;
   --sgds-gray-900: #0e0e0e;
 
+  /* Primitive - Brand Color */
+  --sgds-brand-100: var(--sgds-primary-100);
+  --sgds-brand-200: var(--sgds-primary-200);
+  --sgds-brand-300: var(--sgds-primary-300);
+  --sgds-brand-400: var(--sgds-primary-400);
+  --sgds-brand-500: var(--sgds-primary-500);
+  --sgds-brand-600: var(--sgds-primary-600);
+  --sgds-brand-700: var(--sgds-primary-700);
+  --sgds-brand-800: var(--sgds-primary-800);
+  --sgds-brand-900: var(--sgds-primary-900);
+
   /* Alerts, Badge, Button */
-  --sgds-primary-filled: var(--sgds-primary);
+  /* --sgds-primary-filled: var(--sgds-primary);
   --sgds-secondary-filled: var(--sgds-secondary);
   --sgds-success-filled: var(--sgds-success);
   --sgds-info-filled: var(--sgds-info);
@@ -107,7 +133,7 @@
   --sgds-warning-border-subtle: var(--sgds-warning-400);
   --sgds-danger-border-subtle: var(--sgds-danger-400);
   --sgds-light-border-subtle: var(--sgds-gray-400);
-  --sgds-dark-border-subtle: var(--sgds-gray-400);
+  --sgds-dark-border-subtle: var(--sgds-gray-400); */
 
   --sgds-font-sans-serif: "Inter", system-ui, -apple-system, Roboto, Arial, "Noto Sans", "Liberation Sans", sans-serif,
     "Apple Color Emoji", "Noto Color Emoji";
@@ -119,7 +145,7 @@
   --sgds-line-height-md: 1.5;
   --sgds-line-height-lg: 2;
   --sgds-body-line-height: var(--sgds-line-height-lg);
-  --sgds-body-color: var(--sgds-dark);
+  /* --sgds-body-color: var(--sgds-dark); */
   --sgds-body-color-light: var(--sgds-gray-700);
   --sgds-body-color-lighter: var(--sgds-gray-600);
   --sgds-body-bg: var(--sgds-white);
@@ -173,14 +199,254 @@
   /* Input, Button */
   --sgds-input-btn-padding-x: 1rem;
   --sgds-input-btn-padding-y: 0.4375rem;
-  /* Spacers */
+
+  /* Primitive - Border Width */
+  --sgds-border-0: 0px;
+  --sgds-border-1: 1px;
+  --sgds-border-2: 2px;
+  --sgds-border-3: 3px;
+  --sgds-border-4: 4px;
+
+  /* Primitive - Border Radius */
+  --sgds-border-radius-none: 0px;
+  --sgds-border-radius-xs: 2px;
+  --sgds-border-radius-sm: 4px;
+  --sgds-border-radius-md: 8px;
+  --sgds-border-radius-lg: 16px;
+  --sgds-border-radius-xl: 24px;
+  --sgds-border-radius-full: 999px;
+
+  /* Primitive - Breakpoint */
+  --sgds-breakpoint-xs: 0;
+  --sgds-breakpoint-sm: 576px;
+  --sgds-breakpoint-md: 768px;
+  --sgds-breakpoint-lg: 992px;
+  --sgds-breakpoint-xl: 1200px;
+  --sgds-breakpoint-xxl: 1400px;
+
+  /* Primitive - Font Family */
+
+  /* Primitive - Font Weight */
+  --sgds-font-weight-light: 300;
+  --sgds-font-weight-regular: 400;
+  --sgds-font-weight-semibold: 600;
+  --sgds-font-weight-bold: 700;
+
+  /* Primitive - Font Size */
+  --sgds-font-size-1: 0.875rem;
+  --sgds-font-size-2: 1rem;
+  --sgds-font-size-3: 1.25rem;
+  --sgds-font-size-4: 1.5rem;
+  --sgds-font-size-5: 1.75rem;
+  --sgds-font-size-6: 2rem;
+  --sgds-font-size-7: 2.5rem;
+  --sgds-font-size-8: 3rem;
+  --sgds-font-size-9: 3.5rem;
+
+  /* Primitive - Icon Size */
+  --sgds-icon-size-sm: 16px;
+  --sgds-icon-size-md: 20px;
+  --sgds-icon-size-lg: 24px;
+  --sgds-icon-size-xl: 32px;
+  --sgds-icon-size-2-xl: 48px;
+
+  /* Primitive - Letter Spacing */
+  --sgds-letter-spacing-tighter: -1px;
+  --sgds-letter-spacing-tight: -0.4px;
+  --sgds-letter-spacing-normal: 0px;
+  --sgds-letter-spacing-wide: 1px;
+  --sgds-letter-spacing-wider: 2px;
+
+  /* Primitive - Opacity */
+  --sgds-opacity-0: 0;
+  --sgds-opacity-10: 0.1;
+  --sgds-opacity-20: 0.2;
+  --sgds-opacity-30: 0.3;
+  --sgds-opacity-40: 0.4;
+  --sgds-opacity-50: 0.5;
+  --sgds-opacity-60: 0.6;
+  --sgds-opacity-70: 0.7;
+  --sgds-opacity-80: 0.8;
+  --sgds-opacity-90: 0.9;
+  --sgds-opacity-100: 1;
+
+  /* Primitive - Paragraph Spacing */
+  --sgds-paragraph-spacing-none: 0;
+  --sgds-paragraph-spacing-sm: 0.5rem;
+  --sgds-paragraph-spacing-md: 1rem;
+  --sgds-paragraph-spacing-lg: 1.5rem;
+  --sgds-paragraph-spacing-xl: 2rem;
+
+  /* Primitive - Spacer */
   --sgds-spacer-0: 0rem;
-  --sgds-spacer-1: 0.25rem;
-  --sgds-spacer-2: 0.5rem;
-  --sgds-spacer-3: 1rem;
-  --sgds-spacer-4: 1.5rem;
-  --sgds-spacer-5: 2rem;
-  --sgds-spacer-6: 2.5rem;
-  --sgds-spacer-7: 3rem;
-  --sgds-spacer-8: 3.5rem;
+  --sgds-spacer-1: 0.125rem;
+  --sgds-spacer-2: 0.25rem;
+  --sgds-spacer-3: 0.5rem;
+  --sgds-spacer-4: 0.75rem;
+  --sgds-spacer-5: 1rem;
+  --sgds-spacer-6: 1.25rem;
+  --sgds-spacer-7: 1.5rem;
+  --sgds-spacer-8: 2rem;
+  --sgds-spacer-9: 3rem;
+  --sgds-spacer-10: 4rem;
+  --sgds-spacer-11: 6rem;
+  --sgds-spacer-12: 8rem;
+
+  /* Primitive - Dimension */
+  --sgds-dimension-0: 0px;
+  --sgds-dimension-1: 1px;
+  --sgds-dimension-2: 2px;
+  --sgds-dimension-4: 4px;
+  --sgds-dimension-8: 8px;
+  --sgds-dimension-12: 12px;
+  --sgds-dimension-16: 16px;
+  --sgds-dimension-20: 20px;
+  --sgds-dimension-24: 24px;
+  --sgds-dimension-32: 32px;
+  --sgds-dimension-40: 40px;
+  --sgds-dimension-48: 48px;
+  --sgds-dimension-56: 56px;
+  --sgds-dimension-64: 64px;
+  --sgds-dimension-72: 72px;
+  --sgds-dimension-80: 80px;
+  --sgds-dimension-96: 96px;
+  --sgds-dimension-112: 112px;
+  --sgds-dimension-128: 128px;
+  --sgds-dimension-256: 256px;
+  --sgds-dimension-320: 320px;
+
+  /* Semantic - Default Colors */
+  --sgds-default-bg: var(--sgds-gray-000);
+  --sgds-default-bg-muted: var(--sgds-gray-200);
+  --sgds-default-bg-subtle: var(--sgds-gray-600);
+  --sgds-default-bg-emphasis: var(--sgds-gray-800);
+  --sgds-default-bg-translucent: rgba(14, 14, 14, 0.1);
+  --sgds-default-bg-transparent: transparent;
+  --sgds-default-color: var(--sgds-gray-900);
+  --sgds-default-color-inverse: var(--sgds-gray-000);
+  --sgds-default-color-muted: var(--sgds-gray-200);
+  --sgds-default-color-subtle: var(--sgds-gray-400);
+  --sgds-default-color-on-light: var(--sgds-gray-000);
+  --sgds-default-color-on-dark: var(--sgds-gray-800);
+  --sgds-default-color-transparent: transparent;
+  --sgds-default-border-color: var(--sgds-gray-500);
+  --sgds-default-border-color-inverse: var(--sgds-gray-000);
+  --sgds-default-border-color-muted: var(--sgds-gray-200);
+  --sgds-default-border-color-subtle: var(--sgds-gray-300);
+  --sgds-default-border-color-transparent: transparent;
+
+  /* Semantic - Alternate Color */
+  --sgds-alternate-bg: var(--sgds-gray-100);
+
+  /* Semantic - Primary Colors */
+  --sgds-primary-bg: var(--sgds-brand-600);
+  --sgds-primary-bg-subtle: var(--sgds-brand-100);
+  --sgds-primary-bg-emphasis: var(--sgds-brand-700);
+  --sgds-primary-bg-translucent: rgba(90, 66, 192, 0.1);
+  --sgds-primary-color: var(--sgds-brand-600);
+  --sgds-primary-color-emphasis: var(--sgds-brand-700);
+  --sgds-primary-border-color: var(--sgds-brand-600);
+  --sgds-primary-border-color-subtle: var(--sgds-brand-300);
+  --sgds-primary-border-color-emphasis: var(--sgds-brand-700);
+
+  /* Semantic - Success Colors */
+  --sgds-success-bg: var(--sgds-success-600);
+  --sgds-success-bg-subtle: var(--sgds-success-100);
+  --sgds-success-bg-emphasis: var(--sgds-success-700);
+  --sgds-success-color: var(--sgds-success-600);
+  --sgds-success-color-emphasis: var(--sgds-success-700);
+  --sgds-success-border-color: var(--sgds-success-500);
+  --sgds-success-border-color-subtle: var(--sgds-success-300);
+  --sgds-success-border-color-emphasis: var(--sgds-success-700);
+
+  /* Semantic - Danger Colors */
+  --sgds-danger-bg: var(--sgds-danger-600);
+  --sgds-danger-bg-subtle: var(--sgds-danger-100);
+  --sgds-danger-bg-emphasis: var(--sgds-danger-700);
+  --sgds-danger-color: var(--sgds-danger-600);
+  --sgds-danger-color-emphasis: var(--sgds-danger-700);
+  --sgds-danger-border-color: var(--sgds-danger-500);
+  --sgds-danger-border-color-subtle: var(--sgds-danger-300);
+  --sgds-danger-border-color-emphasis: var(--sgds-danger-700);
+
+  /* Semantic - Warning Colors */
+  --sgds-warning-bg: var(--sgds-warning-600);
+  --sgds-warning-bg-subtle: var(--sgds-warning-100);
+  --sgds-warning-bg-emphasis: var(--sgds-warning-700);
+  --sgds-warning-color: var(--sgds-warning-600);
+  --sgds-warning-color-emphasis: var(--sgds-warning-700);
+  --sgds-warning-border-color: var(--sgds-warning-500);
+  --sgds-warning-border-color-subtle: var(--sgds-warning-300);
+  --sgds-warning-border-color-emphasis: var(--sgds-warning-700);
+
+  /* Semantic - Neutral Colors */
+  --sgds-neutral-bg: var(--sgds-gray-700);
+  --sgds-neutral-bg-subtle: var(--sgds-gray-100);
+  --sgds-neutral-color: var(--sgds-gray-600);
+  --sgds-neutral-color-emphasis: var(--sgds-gray-700);
+  --sgds-neutral-border-color: var(--sgds-gray-500);
+  --sgds-neutral-border-color-subtle: var(--sgds-gray-300);
+  --sgds-neutral-border-color-emphasis: var(--sgds-gray-700);
+
+  /* Semantic - Display Colors */
+  --sgds-display-color: var(--sgds-gray-900);
+  --sgds-display-color-subtle: var(--sgds-gray-700);
+
+  /* Semantic - Header Colors */
+  --sgds-header-color: var(--sgds-gray-800);
+  --sgds-header-color-subtle: var(--sgds-gray-700);
+
+  /* Semantic - Subtitle Colors */
+  --sgds-subtitle-color: var(--sgds-gray-800);
+  --sgds-subtitle-color-subtle: var(--sgds-gray-700);
+
+  /* Semantic - Body Colors */
+  --sgds-body-color: var(--sgds-gray-900);
+  --sgds-body-color-subtle: var(--sgds-gray-600);
+
+  /* Semantic - Label Colors */
+  --sgds-label-color: var(--sgds-gray-800);
+  --sgds-label-color-subtle: var(--sgds-gray-600);
+
+  /* Semantic - Caption Color */
+  --sgds-caption-color: var(--sgds-gray-600);
+
+  /* Semantic - Overline Color */
+  --sgds-overline-color: var(--sgds-gray-600);
+
+  /* Semantic - Link Color */
+  --sgds-link-color: var(--sgds-gray-600);
+  --sgds-link-color-emphasis: var(--sgds-gray-700);
+
+  /* Semantic - Spacer */
+  --sgds-padding-none: var(--sgds-spacer-0);
+  --sgds-padding-3-xs: var(--sgds-spacer-1);
+  --sgds-padding-2-xs: var(--sgds-spacer-2);
+  --sgds-padding-xs: var(--sgds-spacer-3);
+  --sgds-padding-sm: var(--sgds-spacer-4);
+  --sgds-padding-md: var(--sgds-spacer-5);
+  --sgds-padding-lg: var(--sgds-spacer-6);
+  --sgds-padding-xl: var(--sgds-spacer-7);
+  --sgds-padding-2-xl: var(--sgds-spacer-8);
+  --sgds-padding-3-xl: var(--sgds-spacer-9);
+
+  --sgds-margin-none: var(--sgds-spacer-0);
+  --sgds-margin-3-xs: var(--sgds-spacer-3);
+  --sgds-margin-2-xs: var(--sgds-spacer-5);
+  --sgds-margin-xs: var(--sgds-spacer-6);
+  --sgds-margin-sm: var(--sgds-spacer-7);
+  --sgds-margin-md: var(--sgds-spacer-8);
+  --sgds-margin-lg: var(--sgds-spacer-9);
+  --sgds-margin-xl: var(--sgds-spacer-10);
+  --sgds-margin-2-xl: var(--sgds-spacer-11);
+  --sgds-margin-3-xl: var(--sgds-spacer-12);
+  
+  --sgds-gap-none: var(--sgds-spacer-0);
+  --sgds-gap-2-xs: var(--sgds-spacer-2);
+  --sgds-gap-xs: var(--sgds-spacer-3);
+  --sgds-gap-sm: var(--sgds-spacer-4);
+  --sgds-gap-md: var(--sgds-spacer-5);
+  --sgds-gap-lg: var(--sgds-spacer-6);
+  --sgds-gap-xl: var(--sgds-spacer-7);
+  --sgds-gap-2-xl: var(--sgds-spacer-8);
 }
