--- a/src/base/sgds-element.css
+++ b/src/base/sgds-element.css
@@ -4,7 +4,7 @@
   background-color: var(--sgds-body-bg);
   color: var(--sgds-body-color);
   font-family: var(--sgds-body-font-family);
-  font-size: var(--sgds-body-font-size);
+  font-size: var(--sgds-font-size-2);
   font-weight: var(--sgds-body-font-weight);
   line-height: var(--sgds-body-line-height);
   margin: 0;
