--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -96,7 +96,8 @@ button:focus:not(:focus-visible) {
     transition: none;
   }
 }
-.btn:hover {
+.btn:hover,
+.btn.active {
   background-color: var(--sgds-btn-hover-bg);
 }
 .btn:focus-visible {
