--- a/src/base/sgds-element.css
+++ b/src/base/sgds-element.css
@@ -1,15 +1,13 @@
 :host {
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  background-color: var(--sgds-body-bg);
   color: var(--sgds-body-color);
-  font-family: var(--sgds-body-font-family);
+  font-family: var(--sgds-font-family-brand);
   font-size: var(--sgds-font-size-2);
-  font-weight: var(--sgds-body-font-weight);
-  line-height: var(--sgds-body-line-height);
+  font-weight: var(--sgds-font-weight-regular);
+  line-height: var(--sgds-line-height-body);
   margin: 0;
-  text-align: var(--sgds-body-text-align);
-
+  
   *,
   :after,
   :before {
