--- a/src/themes/day.css
+++ b/src/themes/day.css
@@ -1,326 +1,13 @@
+@import "./root.css";
 :root {
   color-scheme: only light;
-  --sgds-primary: #5a42c0;
-  --sgds-secondary: #006472;
-  --sgds-success: #006b00;
-  --sgds-info: #0049dc;
-  --sgds-warning: #864b00;
-  --sgds-danger: #b90000;
-  --sgds-light: #eaeaea;
-  --sgds-dark: #252525;
-  --sgds-black: #000;
-  --sgds-white: #fff;
-  --sgds-gray: #595959;
-
-  /* Primitive - Primary Color */
-  --sgds-primary-100: #eae8ff;
-  --sgds-primary-200: #d1ceff;
-  --sgds-primary-300: #b1acff;
-  --sgds-primary-400: #9288f0;
-  --sgds-primary-500: #7562e2;
-  --sgds-primary-600: #5a42c0;
-  --sgds-primary-700: #42209f;
-  --sgds-primary-800: #2d007e;
-  --sgds-primary-900: #1c005e;
-
-  /* Primitive - Secondary Color */
-  --sgds-secondary-100: #c8f1f9;
-  --sgds-secondary-200: #abd9e2;
-  --sgds-secondary-300: #85bbc5;
-  --sgds-secondary-400: #5b9da9;
-  --sgds-secondary-500: #228190;
-  --sgds-secondary-600: #006472;
-  --sgds-secondary-700: #004755;
-  --sgds-secondary-800: #002c3a;
-  --sgds-secondary-900: #001321;
-
-  /* Primitive - Success Color */
-  --sgds-success-100: #c2f5bf;
-  --sgds-success-200: #a5dfa1;
-  --sgds-success-300: #7ec17a;
-  --sgds-success-400: #53a450;
-  --sgds-success-500: #088912;
-  --sgds-success-600: #006b00;
-  --sgds-success-700: #004d00;
-  --sgds-success-800: #003100;
-  --sgds-success-900: #001600;
-
-  /* Primitive - Info Color */
-  --sgds-info-100: #c5f0ff;
-  --sgds-info-200: #a7d6ff;
-  --sgds-info-300: #7fb5ff;
-  --sgds-info-400: #5592ff;
-  --sgds-info-500: #216bff;
-  --sgds-info-600: #0049dc;
-  --sgds-info-700: #0022b9;
-  --sgds-info-800: #000097;
-  --sgds-info-900: #130075;
-
-  /* Primitive - Warning Color */
-  --sgds-warning-100: #ffe6c6;
-  --sgds-warning-200: #f3cda8;
-  --sgds-warning-300: #d7ab81;
-  --sgds-warning-400: #bc8a57;
-  --sgds-warning-500: #a5681f;
-  --sgds-warning-600: #864b00;
-  --sgds-warning-700: #672f00;
-  --sgds-warning-800: #491200;
-  --sgds-warning-900: #2d0000;
-
-  /* Primitive - Danger Color */
-  --sgds-danger-100: #ffdac8;
-  --sgds-danger-200: #ffbdaa;
-  --sgds-danger-300: #ff9782;
-  --sgds-danger-400: #f06e57;
-  --sgds-danger-500: #dd361c;
-  --sgds-danger-600: #b90000;
-  --sgds-danger-700: #950000;
-  --sgds-danger-800: #720000;
-  --sgds-danger-900: #4f0000;
-
-  /* Primitive - Gray Color */
-  --sgds-gray-000: #ffffff;
-  --sgds-gray-100: #eaeaea;
-  --sgds-gray-200: #d2d2d2;
-  --sgds-gray-300: #b2b2b2;
-  --sgds-gray-400: #939393;
-  --sgds-gray-500: #757575;
-  --sgds-gray-600: #595959;
-  --sgds-gray-700: #3e3e3e;
-  --sgds-gray-800: #252525;
-  --sgds-gray-900: #0e0e0e;
-
-  /* Primitive - Brand Color */
-  --sgds-brand-100: var(--sgds-primary-100);
-  --sgds-brand-200: var(--sgds-primary-200);
-  --sgds-brand-300: var(--sgds-primary-300);
-  --sgds-brand-400: var(--sgds-primary-400);
-  --sgds-brand-500: var(--sgds-primary-500);
-  --sgds-brand-600: var(--sgds-primary-600);
-  --sgds-brand-700: var(--sgds-primary-700);
-  --sgds-brand-800: var(--sgds-primary-800);
-  --sgds-brand-900: var(--sgds-primary-900);
-
-  /* Alerts, Badge, Button */
-  /* --sgds-primary-filled: var(--sgds-primary);
-  --sgds-secondary-filled: var(--sgds-secondary);
-  --sgds-success-filled: var(--sgds-success);
-  --sgds-info-filled: var(--sgds-info);
-  --sgds-warning-filled: var(--sgds-warning);
-  --sgds-danger-filled: var(--sgds-danger);
-  --sgds-light-filled: var(--sgds-light);
-  --sgds-dark-filled: var(--sgds-dark);
-  --sgds-primary-text-emphasis: var(--sgds-primary);
-  --sgds-secondary-text-emphasis: var(--sgds-secondary);
-  --sgds-success-text-emphasis: var(--sgds-success);
-  --sgds-info-text-emphasis: var(--sgds-info);
-  --sgds-warning-text-emphasis: var(--sgds-warning);
-  --sgds-danger-text-emphasis: var(--sgds-danger);
-  --sgds-light-text-emphasis: var(--sgds-dark);
-  --sgds-dark-text-emphasis: var(--sgds-white);
-  --sgds-primary-bg-subtle: var(--sgds-primary-100);
-  --sgds-secondary-bg-subtle: var(--sgds-secondary-100);
-  --sgds-success-bg-subtle: var(--sgds-success-100);
-  --sgds-info-bg-subtle: var(--sgds-info-100);
-  --sgds-warning-bg-subtle: var(--sgds-warning-100);
-  --sgds-danger-bg-subtle: var(--sgds-danger-100);
-  --sgds-light-bg-subtle: var(--sgds-gray-100);
-  --sgds-dark-bg-subtle: var(--sgds-gray-800);
-  --sgds-primary-border-subtle: var(--sgds-primary-400);
-  --sgds-secondary-border-subtle: var(--sgds-secondary-400);
-  --sgds-success-border-subtle: var(--sgds-success-400);
-  --sgds-info-border-subtle: var(--sgds-info-400);
-  --sgds-warning-border-subtle: var(--sgds-warning-400);
-  --sgds-danger-border-subtle: var(--sgds-danger-400);
-  --sgds-light-border-subtle: var(--sgds-gray-400);
-  --sgds-dark-border-subtle: var(--sgds-gray-400); */
-
-  --sgds-font-sans-serif: "Inter", system-ui, -apple-system, Roboto, Arial, "Noto Sans", "Liberation Sans", sans-serif,
-    "Apple Color Emoji", "Noto Color Emoji";
-  --sgds-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  --sgds-body-font-family: var(--sgds-font-sans-serif);
-  --sgds-body-font-size: 1rem;
-  --sgds-body-font-weight: 400;
-  --sgds-line-height-sm: 1.2;
-  --sgds-line-height-md: 1.5;
-  --sgds-line-height-lg: 2;
-  --sgds-body-line-height: var(--sgds-line-height-lg);
-  /* --sgds-body-color: var(--sgds-dark); */
-  --sgds-body-color-light: var(--sgds-gray-700);
-  --sgds-body-color-lighter: var(--sgds-gray-600);
-  --sgds-body-bg: var(--sgds-white);
-  --sgds-border-width: 1px;
-  --sgds-border-style: solid;
-  --sgds-border-color: var(--sgds-gray-400);
-  --sgds-border-color-translucent: rgba(0, 0, 0, 0.175);
-  /* --sgds-border-radius: 0.25rem;
-  --sgds-border-radius-sm: 0.2rem;
-  --sgds-border-radius-lg: 0.3rem;
-  --sgds-border-radius-xl: 1rem;
-  --sgds-border-radius-xxl: 2rem;
-  --sgds-border-radius-2xl: var(--sgds-border-radius-xxl);
-  --sgds-border-radius-pill: 50rem; */
-  --sgds-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-  --sgds-box-shadow-sm: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
-  --sgds-box-shadow-lg: 0 1rem 3rem rgba(0, 0, 0, 0.175);
-  --sgds-box-shadow-inset: inset 0 1px 2px rgba(0, 0, 0, 0.075);
-  --sgds-focus-ring-width: 0.25rem;
-  --sgds-focus-ring-opacity: 0.25;
-  --sgds-focus-ring-color: rgba(90, 66, 192, 0.25);
-  --sgds-focus-width: 0.13rem;
-  --sgds-disabled-color: var(--sgds-gray-400);
-  --sgds-disabled-opacity: var(--sgds-opacity-50);
-  --sgds-disabled-bg: var(--sgds-gray-200);
-
-  /* Links */
-  --sgds-link: var(--sgds-info);
-  --sgds-link-decoration: underline;
-  --sgds-link-hover-color: var(--sgds-info-700);
-
-  /* Form */
-  --sgds-form-valid-color: var(--sgds-success);
-  --sgds-form-invalid-color: var(--sgds-danger);
-  --sgds-form-valid-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23006b00'%3E%3Cpath d='M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z'/%3E%3C/svg%3E");
-  --sgds-form-invalid-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23b90000'%3E%3Cpath d='M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z'/%3E%3Cpath d='M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z'/%3E%3C/svg%3E");
-  --sgds-form-feedback-font-size: 0.875rem;
-  --sgds-form-border-color: var(--sgds-border-color);
-  --sgds-form-label-font-weight: 700;
-  --sgds-form-label-color: var(--sgds-body-color);
-  --sgds-form-hint-text-color: var(--sgds-body-color-lighter);
-  --sgds-form-hint-text-font-weight: var(--sgds-body-font-weight);
-  --sgds-form-hint-text-font-size: var(--sgds-body-font-size);
-  --sgds-form-focus-box-shadow: 0px 0px 0px var(--sgds-focus-width) var(--sgds-info-300);
-  --sgds-form-focus-invalid-box-shadow: 0px 0px 0px var(--sgds-focus-width) var(--sgds-danger-300);
-  --sgds-form-focus-valid-box-shadow: 0px 0px 0px var(--sgds-focus-width) var(--sgds-success-300);
-  --sgds-form-bg: var(--sgds-body-bg);
-  --sgds-form-border-width: 1px;
-  --sgds-form-inline-margin-right: var(--sgds-spacer-4);
-  --sgds-form-input-margin-right: var(--sgds-spacer-2);
-  /* Input, Button */
-  --sgds-input-btn-padding-x: var(--sgds-padding-lg);
-  --sgds-input-btn-padding-y: 0rem;
-
-  /* Primitive - Border Width */
-  --sgds-border-width-0: 0px;
-  --sgds-border-width-1: 1px;
-  --sgds-border-width-2: 2px;
-  --sgds-border-width-3: 3px;
-  --sgds-border-width-4: 4px;
-
-  /* Primitive - Border Radius */
-  --sgds-border-radius-none: 0px;
-  --sgds-border-radius-xs: 2px;
-  --sgds-border-radius-sm: 4px;
-  --sgds-border-radius-md: 8px;
-  --sgds-border-radius-lg: 16px;
-  --sgds-border-radius-xl: 24px;
-  --sgds-border-radius-full: 999px;
-
-  /* Primitive - Breakpoint */
-  --sgds-breakpoint-xs: 0;
-  --sgds-breakpoint-sm: 576px;
-  --sgds-breakpoint-md: 768px;
-  --sgds-breakpoint-lg: 992px;
-  --sgds-breakpoint-xl: 1200px;
-  --sgds-breakpoint-xxl: 1400px;
-
-  /* Primitive - Font Family */
-
-  /* Primitive - Font Weight */
-  --sgds-font-weight-light: 300;
-  --sgds-font-weight-regular: 400;
-  --sgds-font-weight-semibold: 600;
-  --sgds-font-weight-bold: 700;
-
-  /* Primitive - Font Size */
-  --sgds-font-size-1: 0.875rem;
-  --sgds-font-size-2: 1rem;
-  --sgds-font-size-3: 1.25rem;
-  --sgds-font-size-4: 1.5rem;
-  --sgds-font-size-5: 1.75rem;
-  --sgds-font-size-6: 2rem;
-  --sgds-font-size-7: 2.5rem;
-  --sgds-font-size-8: 3rem;
-  --sgds-font-size-9: 3.5rem;
-
-  /* Primitive - Icon Size */
-  --sgds-icon-size-sm: 1rem;
-  --sgds-icon-size-md: 1.25rem;
-  --sgds-icon-size-lg: 1.5rem;
-  --sgds-icon-size-xl: 2rem;
-  --sgds-icon-size-2-xl: 3rem;
-
-  /* Primitive - Letter Spacing */
-  --sgds-letter-spacing-tighter: -1px;
-  --sgds-letter-spacing-tight: -0.4px;
-  --sgds-letter-spacing-normal: 0px;
-  --sgds-letter-spacing-wide: 1px;
-  --sgds-letter-spacing-wider: 2px;
-
-  /* Primitive - Opacity */
-  --sgds-opacity-0: 0;
-  --sgds-opacity-10: 0.1;
-  --sgds-opacity-20: 0.2;
-  --sgds-opacity-30: 0.3;
-  --sgds-opacity-40: 0.4;
-  --sgds-opacity-50: 0.5;
-  --sgds-opacity-60: 0.6;
-  --sgds-opacity-70: 0.7;
-  --sgds-opacity-80: 0.8;
-  --sgds-opacity-90: 0.9;
-  --sgds-opacity-100: 1;
-
-  /* Primitive - Paragraph Spacing */
-  --sgds-paragraph-spacing-none: 0;
-  --sgds-paragraph-spacing-sm: 0.5rem;
-  --sgds-paragraph-spacing-md: 1rem;
-  --sgds-paragraph-spacing-lg: 1.5rem;
-  --sgds-paragraph-spacing-xl: 2rem;
-
-  /* Primitive - Spacer */
-  --sgds-spacer-0: 0rem;
-  --sgds-spacer-1: 0.125rem;
-  --sgds-spacer-2: 0.25rem;
-  --sgds-spacer-3: 0.5rem;
-  --sgds-spacer-4: 0.75rem;
-  --sgds-spacer-5: 1rem;
-  --sgds-spacer-6: 1.25rem;
-  --sgds-spacer-7: 1.5rem;
-  --sgds-spacer-8: 2rem;
-  --sgds-spacer-9: 3rem;
-  --sgds-spacer-10: 4rem;
-  --sgds-spacer-11: 6rem;
-  --sgds-spacer-12: 8rem;
-
-  /* Primitive - Dimension */
-  --sgds-dimension-0: 0px;
-  --sgds-dimension-1: 1px;
-  --sgds-dimension-2: 2px;
-  --sgds-dimension-4: 4px;
-  --sgds-dimension-8: 8px;
-  --sgds-dimension-12: 12px;
-  --sgds-dimension-16: 16px;
-  --sgds-dimension-20: 20px;
-  --sgds-dimension-24: 24px;
-  --sgds-dimension-32: 32px;
-  --sgds-dimension-40: 40px;
-  --sgds-dimension-48: 48px;
-  --sgds-dimension-56: 56px;
-  --sgds-dimension-64: 64px;
-  --sgds-dimension-72: 72px;
-  --sgds-dimension-80: 80px;
-  --sgds-dimension-96: 96px;
-  --sgds-dimension-112: 112px;
-  --sgds-dimension-128: 128px;
-  --sgds-dimension-256: 256px;
-  --sgds-dimension-320: 320px;
 
   /* Semantic - Default Colors */
   --sgds-default-bg: var(--sgds-gray-000);
   --sgds-default-bg-muted: var(--sgds-gray-200);
   --sgds-default-bg-subtle: var(--sgds-gray-600);
   --sgds-default-bg-emphasis: var(--sgds-gray-800);
-  --sgds-default-bg-translucent: rgba(14, 14, 14, 0.1);
+  --sgds-default-bg-translucent: oklch(from var(--sgds-gray-900) l c h / 0.1);
   --sgds-default-bg-transparent: transparent;
   --sgds-default-color: var(--sgds-gray-900);
   --sgds-default-color-inverse: var(--sgds-gray-000);
@@ -342,7 +29,7 @@
   --sgds-primary-bg: var(--sgds-brand-600);
   --sgds-primary-bg-subtle: var(--sgds-brand-100);
   --sgds-primary-bg-emphasis: var(--sgds-brand-700);
-  --sgds-primary-bg-translucent: rgba(90, 66, 192, 0.1);
+  --sgds-primary-bg-translucent: oklch(from var(--sgds-brand-600) l c h / 0.1);
   --sgds-primary-color: var(--sgds-brand-600);
   --sgds-primary-color-emphasis: var(--sgds-brand-700);
   --sgds-primary-border-color: var(--sgds-brand-600);
@@ -350,37 +37,38 @@
   --sgds-primary-border-color-emphasis: var(--sgds-brand-700);
 
   /* Semantic - Success Colors */
-  --sgds-success-bg: var(--sgds-success-600);
-  --sgds-success-bg-subtle: var(--sgds-success-100);
-  --sgds-success-bg-emphasis: var(--sgds-success-700);
-  --sgds-success-color: var(--sgds-success-600);
-  --sgds-success-color-emphasis: var(--sgds-success-700);
-  --sgds-success-border-color: var(--sgds-success-500);
-  --sgds-success-border-color-subtle: var(--sgds-success-300);
-  --sgds-success-border-color-emphasis: var(--sgds-success-700);
+  --sgds-success-bg: var(--sgds-green-600);
+  --sgds-success-bg-subtle: var(--sgds-green-100);
+  --sgds-success-bg-emphasis: var(--sgds-green-700);
+  --sgds-success-color: var(--sgds-green-600);
+  --sgds-success-color-emphasis: var(--sgds-green-700);
+  --sgds-success-border-color: var(--sgds-green-500);
+  --sgds-success-border-color-subtle: var(--sgds-green-300);
+  --sgds-success-border-color-emphasis: var(--sgds-green-700);
 
   /* Semantic - Danger Colors */
-  --sgds-danger-bg: var(--sgds-danger-600);
-  --sgds-danger-bg-subtle: var(--sgds-danger-100);
-  --sgds-danger-bg-emphasis: var(--sgds-danger-700);
-  --sgds-danger-color: var(--sgds-danger-600);
-  --sgds-danger-color-emphasis: var(--sgds-danger-700);
-  --sgds-danger-border-color: var(--sgds-danger-500);
-  --sgds-danger-border-color-subtle: var(--sgds-danger-300);
-  --sgds-danger-border-color-emphasis: var(--sgds-danger-700);
+  --sgds-danger-bg: var(--sgds-red-600);
+  --sgds-danger-bg-subtle: var(--sgds-red-100);
+  --sgds-danger-bg-emphasis: var(--sgds-red-700);
+  --sgds-danger-color: var(--sgds-red-600);
+  --sgds-danger-color-emphasis: var(--sgds-red-700);
+  --sgds-danger-border-color: var(--sgds-red-500);
+  --sgds-danger-border-color-subtle: var(--sgds-red-300);
+  --sgds-danger-border-color-emphasis: var(--sgds-red-700);
 
   /* Semantic - Warning Colors */
-  --sgds-warning-bg: var(--sgds-warning-600);
-  --sgds-warning-bg-subtle: var(--sgds-warning-100);
-  --sgds-warning-bg-emphasis: var(--sgds-warning-700);
-  --sgds-warning-color: var(--sgds-warning-600);
-  --sgds-warning-color-emphasis: var(--sgds-warning-700);
-  --sgds-warning-border-color: var(--sgds-warning-500);
-  --sgds-warning-border-color-subtle: var(--sgds-warning-300);
-  --sgds-warning-border-color-emphasis: var(--sgds-warning-700);
+  --sgds-warning-bg: var(--sgds-yellow-600);
+  --sgds-warning-bg-subtle: var(--sgds-yellow-100);
+  --sgds-warning-bg-emphasis: var(--sgds-yellow-700);
+  --sgds-warning-color: var(--sgds-yellow-600);
+  --sgds-warning-color-emphasis: var(--sgds-yellow-700);
+  --sgds-warning-border-color: var(--sgds-yellow-500);
+  --sgds-warning-border-color-subtle: var(--sgds-yellow-300);
+  --sgds-warning-border-color-emphasis: var(--sgds-yellow-700);
 
   /* Semantic - Neutral Colors */
   --sgds-neutral-bg: var(--sgds-gray-700);
+  --sgds-neutral-bg-inverse: var(--sgds-gray-000);
   --sgds-neutral-bg-subtle: var(--sgds-gray-100);
   --sgds-neutral-color: var(--sgds-gray-600);
   --sgds-neutral-color-emphasis: var(--sgds-gray-700);
@@ -415,38 +103,6 @@
   --sgds-overline-color: var(--sgds-gray-600);
 
   /* Semantic - Link Color */
-  --sgds-link-color: var(--sgds-gray-600);
-  --sgds-link-color-emphasis: var(--sgds-gray-700);
-
-  /* Semantic - Spacer */
-  --sgds-padding-none: var(--sgds-spacer-0);
-  --sgds-padding-3-xs: var(--sgds-spacer-1);
-  --sgds-padding-2-xs: var(--sgds-spacer-2);
-  --sgds-padding-xs: var(--sgds-spacer-3);
-  --sgds-padding-sm: var(--sgds-spacer-4);
-  --sgds-padding-md: var(--sgds-spacer-5);
-  --sgds-padding-lg: var(--sgds-spacer-6);
-  --sgds-padding-xl: var(--sgds-spacer-7);
-  --sgds-padding-2-xl: var(--sgds-spacer-8);
-  --sgds-padding-3-xl: var(--sgds-spacer-9);
-
-  --sgds-margin-none: var(--sgds-spacer-0);
-  --sgds-margin-3-xs: var(--sgds-spacer-3);
-  --sgds-margin-2-xs: var(--sgds-spacer-5);
-  --sgds-margin-xs: var(--sgds-spacer-6);
-  --sgds-margin-sm: var(--sgds-spacer-7);
-  --sgds-margin-md: var(--sgds-spacer-8);
-  --sgds-margin-lg: var(--sgds-spacer-9);
-  --sgds-margin-xl: var(--sgds-spacer-10);
-  --sgds-margin-2-xl: var(--sgds-spacer-11);
-  --sgds-margin-3-xl: var(--sgds-spacer-12);
-  
-  --sgds-gap-none: var(--sgds-spacer-0);
-  --sgds-gap-2-xs: var(--sgds-spacer-2);
-  --sgds-gap-xs: var(--sgds-spacer-3);
-  --sgds-gap-sm: var(--sgds-spacer-4);
-  --sgds-gap-md: var(--sgds-spacer-5);
-  --sgds-gap-lg: var(--sgds-spacer-6);
-  --sgds-gap-xl: var(--sgds-spacer-7);
-  --sgds-gap-2-xl: var(--sgds-spacer-8);
+  --sgds-link-color: var(--sgds-blue-600);
+  --sgds-link-color-emphasis: var(--sgds-blue-700);
 }
