--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -4,8 +4,6 @@
   --sgds-btn-hover-bg: var(--sgds-primary-bg-emphasis);
   --sgds-btn-border-radius: var(--sgds-border-radius-md);
   display: inline-flex;
-  gap: 30px;
-  background-color: transparent;
 }
 
 button:focus:not(:focus-visible) {
@@ -54,7 +52,6 @@ button:focus:not(:focus-visible) {
 }
 
 .btn {
-  --sgds-btn-icon-gap: var(--sgds-gap-2-xs);
   background-color: var(--sgds-btn-bg);
   border: 1px solid var(--sgds-default-border-color-transparent);
   border-radius: var(--sgds-btn-border-radius);
@@ -63,11 +60,11 @@ button:focus:not(:focus-visible) {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  gap: var(--sgds-btn-icon-gap);
+  gap: var(--sgds-gap-2-xs);
   font-size: var(--sgds-font-size-2);
   font-weight: var(--sgds-btn-font-weight);
   line-height: var(--sgds-line-height-md);
-  padding: 0px var(--sgds-input-btn-padding-x);
+  padding: 0px var(--sgds-padding-lg);
   min-width: var(--sgds-dimension-96);
   height: var(--sgds-dimension-48);
   text-align: center;
@@ -108,26 +105,24 @@ button:focus:not(:focus-visible) {
 }
 .btn.disabled,
 .btn:disabled {
-  opacity: var(--sgds-disabled-opacity);
+  opacity: var(--sgds-opacity-50);
   pointer-events: none;
   color: var(--sgds-btn-color);
 }
 .btn-lg {
-  --sgds-input-btn-padding-x: var(--sgds-padding-xl);
   font-size: var(--sgds-font-size-3);
+  padding: 0px var(--sgds-padding-xl);
   min-width: var(--sgds-dimension-112);
   height: var(--sgds-dimension-56);
 }
 
 .btn-sm {
-  --sgds-input-btn-padding-x: var(--sgds-padding-md);
   font-size: var(--sgds-font-size-1);
+  padding: 0px var(--sgds-padding-md);
   min-width: var(--sgds-dimension-80);
   height: var(--sgds-dimension-40);
 }
 
 .btn span {
-  --sgds-btn-label-padding-x: var(--sgds-padding-2-xs);
-  padding-left: var(--sgds-btn-label-padding-x);
-  padding-right: var(--sgds-btn-label-padding-x);
+  padding: 0px var(--sgds-padding-2-xs);
 }
