feat(alert): update alert to figma v3
update cssprops, AlertVariants, added prop title

BREAKING CHANGE: removed <sgds-alert-heading>

--- a/src/base/sgds-element.css
+++ b/src/base/sgds-element.css
@@ -5,9 +5,9 @@
   font-family: var(--sgds-font-family-brand);
   font-size: var(--sgds-font-size-2);
   font-weight: var(--sgds-font-weight-regular);
-  line-height: var(--sgds-line-height-body);
+  line-height: var(--sgds-line-height-heading);
   margin: 0;
-  
+
   *,
   :after,
   :before {
