refactor(alert): add display none when icon slot is empty

--- a/src/components/Alert/alert.css
+++ b/src/components/Alert/alert.css
@@ -60,11 +60,13 @@
 
 slot[name="icon"] {
   display: flex;
-
+}
+slot[name="icon"].d-none {
+  display: none;
 }
 slot[name="icon"]::slotted(*) {
   width: var(--sgds-icon-size-lg);
-  height:  var(--sgds-icon-size-lg);
+  height: var(--sgds-icon-size-lg);
 }
 .alert {
   display: flex;
